--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "electron": "^1.7.5",
     "tslint": "^5.7.0",
     "typescript": "^2.5.2"
+  },
+  "dependencies": {
+    "firebase": "^4.3.0"
   }
 }
